tests/invalid/fatal_width.ostn
# Function: x
#   A function that intentionally fails width consistency checks.
fn x { mov(u64) eax, ebx }
